--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <div class="navbar">
-        <a href="#">Link1</a>
+        <a href="#">;Link1</a>
         <a href="#">Link2</a>
         <a href="#">Link3</a>
         <a href="#">Link4</a>
