--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     </div>
 
     <div class="header">
-        <h1>My Website</h1>
-        <p>A website created by me.</p>
+        <h1>Lanneau Izaak</h1>
+        <p>Industrieel ontwerper</p>
     </div>
 
 
@@ -28,8 +28,8 @@
     <div class="row">
         <div class="side">
             <h2>About Me</h2>
-            <h5>Photo of me:</h5>
-            <div class="fakeimg" style="height:200px;">Image</div>
+            <img src="foto cocon.jpg" alt="Izaak de rups" style="height: 400px;">
+            <div class="fakeimg" style="height:200px;">Image</div>>
             <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
             <h3>More Text</h3>
             <p>Lorem ipsum dolor sit ame.</p>
