--- a/Home.html
+++ b/Home.html
@@ -12,10 +12,10 @@
 <body>
 
     <div class="navbar">
-        <a href="#">;Link1</a>
-        <a href="#">Link2</a>
-        <a href="#">Link3</a>
-        <a href="#">Link4</a>
+        <a href="#">Contact</a>
+        <a href="#">Portfolio</a>
+        <a href="Subject areas.html">Subject areas</a>
+        <a href="index.html">Home</a>
     </div>
 
     <div class="header">
@@ -28,7 +28,7 @@
     <div class="row">
         <div class="side">
             <h2>About Me</h2>
-            <img src="foto cocon.jpg" alt="Izaak de rups" style="height: 400px;">
+            <img src="profiel.jpg" alt="Izaak de rups" style="height: 400px;">
             <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
             <h3>More Text</h3>
             <p>Lorem ipsum dolor sit ame.</p>
