--- a/Subject areas.html
+++ b/Subject areas.html
@@ -15,7 +15,7 @@
         <a href="#">Contact</a>
         <a href="#">Portfolio</a>
         <a href="Subject areas.html">Subject areas</a>
-        <a href="index.html">Home</a>
+        <a href="Home.html">Home</a>
     </div>
 
     <div class="header">
