--- a/Index.html
+++ b/Index.html
@@ -15,7 +15,7 @@
         <a href="#">Contact</a>
         <a href="#">Portfolio</a>
         <a href="Subject areas.html">Subject areas</a>
-        <a href="Index.html">Home</a>
+        <a href="index.html">Home</a>
     </div>
 
     <div class="header">
@@ -29,7 +29,7 @@
         <div class="side">
             <h2>About Me</h2>
             <img src="profiel.jpg" alt="Izaak de rups" style="height: 400px;">
-            <p>Ik ben Izaak Lanneau 19jaar oud. </p>
+            <p>I am izaak Lanneau (2003). i graduated from vti Waregem where i studied industrial engineering. At the moment i am studying industrial design at the university of gent.  Besides my studies, i am also a sailing instructor. </p>
             <h3>More Text</h3>
             <p>Lorem ipsum dolor sit ame.</p>
             <div class="fakeimg" style="height:60px;">Image</div><br>
