--- a/subjectareas.html
+++ b/subjectareas.html
@@ -14,8 +14,8 @@
     <div class="navbar">
         <a href="#">Contact</a>
         <a href="#">Portfolio</a>
-        <a href="#">Subject areas</a>
-        <a href="#">Home</a>
+        <a href="subjectareas.html">Subject areas</a>
+        <a href="index.html">Home</a>
     </div>
 
     <div class="header">
